--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "start-api": "cd api & venv\\Scripts\\activate & cd app & uvicorn main:app --reload",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +50,12 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7"
-  }
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "gh-pages": "^3.2.3"
+  },
+  "homepage": "https://disra.github.io/blue-vending-machine-frontend/",
+  "main": "index.js",
+  "repository": "https://github.com/disra/blue-vending-machine.git",
+  "author": "Disra Udomboonyaluck <disra.udomboonyaluck@seagate.com>",
+  "license": "MIT"
 }
