--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
   "homepage": "https://disra.github.io/blue-vending-machine-frontend/",
   "main": "index.js",
   "repository": "https://github.com/disra/blue-vending-machine.git",
-  "author": "Disra Udomboonyaluck <disra.udomboonyaluck@seagate.com>",
+  "author": "Disra Udomboonyaluck <dart084405@gmail.com>",
   "license": "MIT"
 }
