--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "start-api": "cd api & venv\\Scripts\\activate & cd app & uvicorn main:app --reload",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -50,8 +48,6 @@
   },
   "proxy": "http://localhost:8000",
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
-    "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://disra.github.io/blue-vending-machine-frontend/",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7"
+  }
 }
